--- a/static/index.css
+++ b/static/index.css
@@ -41,14 +41,12 @@
     .sidenav a {font-size: 18px;}
   }
 
-#container,#dynamic-graph{
+#container{
   display: flex;
-
-  height: 500px;
-  width: 200px;
+  height: 600px; 
+  width: 600px;
   padding: 0%;
-  margin-left: auto;
-
+  margin: 0%;
   box-shadow:
   0 2.8px 2.2px rgba(0, 0, 0, 0.034),
   0 6.7px 5.3px rgba(0, 0, 0, 0.048),
@@ -56,22 +54,23 @@
   0 22.3px 17.9px rgba(0, 0, 0, 0.072),
   0 41.8px 33.4px rgba(0, 0, 0, 0.086),
   0 100px 80px rgba(0, 0, 0, 0.12);
-  
   min-height: 200px;
-  width: 20vw;
-  margin: 100px auto;
   background: white;
   border-radius: 5px;
-
 }
-  
+
+
 
 .graph-panel{
   display: flex;
   justify-content: space-evenly;
 }
 
-
+#state-table{
+  overflow-y:scroll;
+  height:100px;
+  display:block;
+}
 
 /* footer CSS */
 
@@ -87,3 +86,4 @@
   padding-bottom: 0%;
   margin-bottom: 0%;
 }
+
